gcc/gcc/testsuite/algol60.dg/fail/labels1.a60
'comment' { dg-do compile } ;
label1:
'begin' 'comment' { dg-error "label" } ;
	label3: ;
	label4: label5:
'end';
